gdnative/tests/ui/export_fail_06.stderr
error: found kinb, expected kind
 --> tests/ui/export_fail_06.rs:4:10
  |
4 | #[export(kinb = "enum")]
  |          ^^^^
